# claude-config

./: .gitignore  CLAUDE.md  MIGRATION.md  README.md  ccfg  claude  install.ps1  install.sh  llm-models-latest.md  settings.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
account/antigravity/: GEMINI.md.example  mcp_config.json.example  rules.md.example  settings.json.example
account/claude-code/: CLAUDE.md  llm-models-latest.md  profile.yaml  settings.json
account/claude-code/hooks/: install.sh  post_edit.py  pre_commit.py
account/claude-code/scripts/: audit_logger.py  git_status.sh  handoff_manager.py  notify_permission.sh  worktree-manager.sh
account/claude-code/scripts/hooks/: session_notify.sh  session_stop.sh
account/codex/: AGENTS.md.example  config.toml.example
agents/: 03-debugger.md  plan-agent.md  time-aware.md  worktree-coordinator.md
commands/: ai-codex.md  ai-gemini.md  dev-setup.md  resume.md  session-handoff.md  session-resume.md  worktree-init.md  worktree-launch.md  worktree-status.md  wt-distribute.md  wt-plan.md  wt-status.md
commands/core/: debug.md  review.md  test.md
commands/workflow/: fix-errors.md  handoff.md  plan.md  resume.md  worktree-distribute.md  worktree-plan.md  worktree-status.md  worktree-sync.md  worktree.md
docs/: DESIGN_PHILOSOPHY.md  PROJECT_OVERRIDE_DESIGN.md  PROJECT_OVERRIDE_GUIDE.md  ROADMAP.md  SKILLS_MIGRATION_PROPOSAL.md  WORKTREE_LESSONS_LEARNED.md  WORKTREE_PARALLEL_GUIDE.md  WORKTREE_USAGE_GUIDE.md
docs/handoff/: .scratch.md.example
docs/implementation-guides/: PHASE_2_HOOKS.md
hooks/: hooks.json  worktree-hooks.json
lib/: common.sh  profile.sh
profiles/account/: CLAUDE.md  profile.yaml  settings.json  settings.local.json.example
profiles/account/agents/: 02-test-runner.md  code-reviewer.md  plan-agent.md  reflection-agent.md  worktree-coordinator.md
profiles/account/commands/ai/: .gitkeep  README.md  gemini.md  route.md  try-free.md
profiles/account/commands/core/: explain.md  optimize.md
profiles/account/commands/dev/: commit.md  cr.md  epct.md  explain.md  optimize.md  refactor.md  review.md
profiles/account/commands/dev/worktree/: sync.md
profiles/account/commands/flow/: handoff.md  plan.md  qa.md  reflection.md  resume.md  scaffold.md
profiles/account/commands/gh/: docs.md  pr.md
profiles/account/commands/worktree/: distribute.md  plan.md  status.md  sync.md
profiles/account/hooks/: install.sh  post_edit.py  pre_commit.py
profiles/account/hooks/python/: install.sh  post_edit.py
profiles/account/scripts/: audit_logger.py  git_status.sh  inject_datetime.sh  worktree-launcher.sh  worktree-manager.sh  worktree-status.sh  worktree-sync.sh
profiles/account/scripts/hooks/: session_notify.sh  session_start.sh  session_stop.sh
profiles/account/skills/ai/: SKILL.md
profiles/account/skills/ai/commands/: pipeline.md
profiles/account/skills/frameworks/fastapi/: SKILL.md
profiles/account/skills/linting/: SKILL.md
profiles/account/skills/linting/context/: javascript.md  python.md  rust.md
profiles/account/skills/linting/workflows/: lint.md
profiles/account/skills/my/: README.md  SKILL.md
profiles/account/skills/my/commands/: ai-codex.md  ai-consensus.md  handoff.md  wt-distribute.md  wt-launch.md  wt-plan.md  wt-status.md  wt-sync.md
profiles/account/skills/my/context/: worktree-guide.md
profiles/account/skills/my/scripts/: worktree-launcher.sh
profiles/account/skills/testing/: SKILL.md
profiles/account/skills/testing/context/: javascript.md  python.md  rust.md
profiles/account/skills/testing/workflows/: test.md
profiles/account/skills/workflow/: SKILL.md
profiles/account/skills/workflow/context/: planning-guide.md
profiles/account/skills/workflow/workflows/: fix-errors.md  plan.md  resume.md
profiles/account/skills/worktree/: SKILL.md
profiles/account/skills/worktree/commands/: distribute.md  plan.md
profiles/account/skills/worktree/context/: worktree-guide.md
profiles/account/skills/worktree/workflows/: distribute.md  status.md
profiles/account/skills/x/: SKILL.md
profiles/account/skills/x/context/: handoff-template.md
profiles/projects/_base/: .editorconfig  profile.yaml
profiles/projects/flutter/.claude/agents/: code-reviewer.md  debugger.md  flutter-expert.md  test-runner.md
profiles/projects/flutter/.claude/scripts/: flutter_health_check.sh
profiles/projects/javascript/: install.sh
profiles/projects/python/: install.sh  profile.yaml  pyproject.toml  ruff.toml  settings.json
profiles/projects/python/.claude/agents/: data-science.md  fastapi-expert.md  python-async.md  python-tdd.md  python-test-runner.md
profiles/projects/python/.claude/commands/: pytest.md
profiles/projects/python/.claude/commands/core/: optimize.md
profiles/projects/python/.claude/commands/dev/: format.md  lint.md  optimize.md  profile.md  types.md  venv.md
profiles/projects/python/.claude/commands/test/: pytest.md  test.md
profiles/projects/python/hooks/: post_edit.py  pre-commit.yaml  pre_commit.py
profiles/projects/rust/: install.sh
reference/worktree/: guide.md
scripts/: audit_logger.py  handoff_manager.py  init.sh  inject.sh  inject_datetime.sh  notify_permission.sh  worktree-manager.sh  worktree-parallel.sh
scripts/hooks/: post_edit.py  pre_commit.py  worktree-pre-edit.sh  worktree-session-complete.sh
skills/dev-setup/: SKILL.md
skills/dev-setup/context/: gitignore-patterns.md
skills/my/: README.md  SKILL.md
skills/my-setup/: SKILL.md
skills/my-setup/context/: gitleaks.md
skills/my-setup/workflows/: setup.md
skills/my/context/: session.md  worktree.md
skills/session/: SKILL.md
skills/session/workflows/: handoff.md  resume.md
skills/worktree/: SKILL.md
skills/worktree/workflows/: init.md  launch.md  status.md
tests/: README.md  conftest.py  run_tests.sh
tests/fixtures/: sample_input.json
tests/hooks/: test_audit_logger.py  test_post_edit.py  test_shell_hooks.bats
tests/install/: test_install.bats
(+19 files in other folders)
